# CMakeLists.txt with user examples

add_subdirectory(celleditors)
add_subdirectory(collidingmice)
add_subdirectory(dragandmove)
add_subdirectory(flateditor)
add_subdirectory(layereditor)
add_subdirectory(plotcolormap)
add_subdirectory(plotgraphs)
add_subdirectory(sampleview)
add_subdirectory(treeviews)
add_subdirectory(quickrefl)
add_subdirectory(graphicsproxy)


