# CMakeLists.txt with user examples

add_subdirectory(celleditors)
add_subdirectory(collidingmice)
add_subdirectory(concurrentplot)
add_subdirectory(defaultqt)
add_subdirectory(dragandmove)
add_subdirectory(flateditor)
add_subdirectory(graphicsproxy)
add_subdirectory(layereditor)
add_subdirectory(plotcolormap)
add_subdirectory(plotgraphs)
add_subdirectory(quickrefl)
#add_subdirectory(sampleview)
add_subdirectory(saveloadproject)
add_subdirectory(treeviews)



