# -----------------------------------------------------------------------------
# Entry point for all project libraries
# -----------------------------------------------------------------------------

add_subdirectory(libmvvm_model)
add_subdirectory(libmvvm_viewmodel)
add_subdirectory(libmvvm_view)
